Added the insertdata file.