@@ -14,7 +14,6 @@ class Helper implements Runnable {
 
             // Making thread sleep for 0.5 seconds
             Thread.sleep(5000);
-
         }
 
         // Catch block to handle exception
@@ -63,7 +62,7 @@ public class JavaAdvanceThreadMethods implements Runnable {
         System.out.println(t.getName());
 
         System.out.println("Thread1 name: " + thread1.getName());
-        System.out.println("Thread1 ID: " + thread1.threadId());
+        System.out.println("Thread1 ID: " + thread1.getId());
 
         // Fetching the priority and state of thread1
         System.out.println("Priority of thread1 = " + thread1.getPriority());
